--- a/public/login.html
+++ b/public/login.html
@@ -4,7 +4,7 @@
   <title>LogIn</title>
 </head>
 <body>
-<form>
+<form action="/login" method="post">
   <h1>Login</h1>
   Username:
   <input type="text" name="username">
