--- a/public/signup.html
+++ b/public/signup.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<form>
+<form action="/create/user" method="post">
   <h1>Sign Up Form</h1>
   Username:
   <input type="text" name="username">
@@ -14,7 +14,7 @@
   <input type="text" name="password">
   <br>
   Confirm Password:
-  <input type="text" name="password">
+  <input type="text" name="confirmpassword">
   <br>
   <button>Submit</button>
   <a href="login.html">LogIn</a>
