--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
   <title>Chat Home</title>
 </head>
 <body>
-  <div id="content">Hello</div>
+  <div id="content">Hello
+    <form action="/logout" method="post">
+      <button>LogOut</button>
+    </form>
+  </div>
 </body>
 </html>
